--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -44,6 +44,8 @@ jobs:
         if: ${{ github.event_name != 'pull_request_target' }}
         uses: docker/build-push-action@v4
         with:
+          context: .
+          file: docker-compose.yml
           load: false
           push: true
           tags: ${{ steps.meta.outputs.tags }}
